Implemented mock graph url for testing the different flows